--- a/packages/api-generator/src/locale/en/validation.json
+++ b/packages/api-generator/src/locale/en/validation.json
@@ -9,12 +9,10 @@
     "success": "Puts the input in a manual success state",
     "successMessages": "Puts the input in a success state and passes through custom success messages.",
     "validateOnBlur": "Delays validation until blur event",
-    "modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))",
     "name": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))",
     "maxErrors": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))",
     "validateOn": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))",
-    "validationValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))",
-    "label": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))"
+    "validationValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/validation.json))"
   },
   "events": {
     "update:error": "The `error.sync` event"
