--- a/packages/api-generator/src/locale/en/v-badge.json
+++ b/packages/api-generator/src/locale/en/v-badge.json
@@ -5,14 +5,13 @@
     "dot": "Reduce the size of the badge and hide its contents.",
     "icon": "Designates a specific icon to render in the badge.",
     "inline": "Moves the badge to be inline with the wrapping element. Supports the usage of the **left** prop.",
-    "label": "The **aria-label** used for the badge.",
+    "label": "The **aria-label** used for the badge",
     "offsetX": "Offset the badge on the x-axis.",
     "offsetY": "Offset the badge on the y-axis.",
     "overlap": "Overlaps the slotted content on top of the component.",
     "max": "Sets the maximum number allowed when using the **content** prop with a `number` like value. If the content number exceeds the maximum value, a `+` suffix is added.",
     "location": "Changes the location of the badge. Possible values are **top**, **bottom**, **start**, **end**, **top start**, **top end**, **bottom start**, **bottom end**.",
-    "floating": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-badge.json))",
-    "modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-badge.json))"
+    "floating": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-badge.json))"
   },
   "slots": {
     "badge": "The slot used for the badge's content."
