--- a/packages/api-generator/src/locale/en/v-color-picker.json
+++ b/packages/api-generator/src/locale/en/v-color-picker.json
@@ -13,12 +13,11 @@
     "swatchesMaxHeight": "Sets the maximum height of the swatches section",
     "value": "Current color. This can be either a string representing a hex color, or an object representing a RGBA, HSLA, or HSVA value",
     "width": "Sets the width of the color picker",
-    "modes": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-color-picker.json))",
-    "modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-color-picker.json))"
+    "modes": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-color-picker.json))"
   },
   "events": {
     "input": "Selected color. Depending on what you passed to the `value` prop this is either a string or an object",
-    "update:color": "Selected color. This is the internal representation of the color, containing all values."
+    "update:color": "Selected color. This is the internal representation of the color, containing all values.",
     "update:mode": "Selected mode"
   }
 }
