--- a/packages/api-generator/src/locale/en/v-lazy.json
+++ b/packages/api-generator/src/locale/en/v-lazy.json
@@ -1,7 +1,6 @@
 {
   "props": {
     "options": "Options that are passed to the [Intersection observer](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API) constructor.",
-    "transition": "Sets the component transition. Can be one of the [built in transitions](/styles/transitions) or one your own.",
-    "modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-lazy.json))"
+    "transition": "Sets the component transition. Can be one of the [built in transitions](/styles/transitions) or one your own."
   }
 }
