--- a/packages/api-generator/src/locale/en/v-counter.json
+++ b/packages/api-generator/src/locale/en/v-counter.json
@@ -1,7 +1,7 @@
 {
   "props": {
     "value": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-counter.json))",
-    "active": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-counter.json))",
+    "active": "Determines whether the counter is visible or not",
     "max": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-counter.json))"
   }
 }
