chore(api-generator): update descriptions

--- a/packages/api-generator/src/locale/en/generic.json
+++ b/packages/api-generator/src/locale/en/generic.json
@@ -12,18 +12,26 @@
     "color": "Applies specified color to the control - supports utility colors (for example `success` or `purple`) or css color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`). Find a list of built-in classes on the [colors page](/styles/colors#material-colors)",
     "contentClass": "Applies a custom class to the detached element. This is useful because the content is moved to the beginning of the `v-app` component (unless the **attach** prop is provided) and is not targetable by classes passed directly on the component",
     "disabled": "Removes the ability to click or target the component",
+    "density": "Adjusts the vertical height used by the component.",
     "falseValue": "Sets value for falsy state",
     "fullWidth": "Sets the component width to 100%",
     "height": "Sets the height for the component",
+    "icon": "Apply a specific icon using the [v-icon](/components/icons/) component.",
+    "image": "Apply a specific image using [v-img](/components/images/).",
     "items": "An array of strings or objects used for automatically generating children components",
     "label": "Sets the text of the [v-label](/api/v-label/) or [v-field-label](/api/v-field-label/) component",
+    "mandatory": "Forces at least one item to always be selected (if available).",
+    "name": "Sets the component's name attribute.",
     "noDataText": "Text shown when no items are provided to the component",
     "modelValue": "The v-model value of the component. If component supports the **multiple** prop, this defaults to an empty array",
     "persistent": "Clicking outside or pressing **esc** key will not dismiss the dialog",
     "prependIcon": "Creates a [v-icon](/api/v-icon/) component in the **prepend** slot before default content",
+    "selectedClass": "Configure the active CSS class applied when an item is selected.",
     "size": "Sets the height and width of the component.",
     "tag": "Specify a custom tag used on the root element",
     "textColor": "Applies a specified color to the control text - supports utility colors (for example `success` or `purple`) or css color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`). Find a list of built-in classes on the [colors page](/styles/colors#material-colors)",
+    "text": "Specify content text for the component.",
+    "title": "Specify a title text for the component.",
     "trueValue": "Sets value for truthy state",
     "valueComparator": "Apply a custom comparison algorithm used for values",
     "variant": "Applies a distinct style to the component",
