--- a/packages/api-generator/src/locale/en/group-item.json
+++ b/packages/api-generator/src/locale/en/group-item.json
@@ -1,7 +1,6 @@
 {
   "props": {
     "value": "The value used when the component is selected in a group. If not provided, a unique ID will be used.",
-    "index": "?",
-    "selectedClass": "Configure the active CSS class applied when the item is selected."
+    "index": "?"
   }
 }
