--- a/packages/api-generator/src/locale/en/position.json
+++ b/packages/api-generator/src/locale/en/position.json
@@ -4,7 +4,7 @@
     "bottom": "Aligns the component towards the bottom.",
     "fixed": "Applies **position: fixed** to the component.",
     "left": "Aligns the component towards the left.",
-    "position": "Specifies the type of positioning method used for an element. Available options are: **static**, **relative**, **fixed**, **absolute**, and **sticky**.",
+    "position": "Specifies the type of positioning method used for the component.",
     "right": "Aligns the component towards the right.",
     "top": "Aligns the content towards the top."
   }
