--- a/packages/api-generator/src/locale/en/v-alert.json
+++ b/packages/api-generator/src/locale/en/v-alert.json
@@ -1,6 +1,6 @@
 {
   "props": {
-    "border": "Puts a border on the alert. Accepts **top** \\| **end** \\| **bottom** \\| **start**.",
+    "border": "Adds a colored border to the component.",
     "borderColor": "Specifies the color of the border. Accepts any color value.",
     "closable": "Adds a close icon that can hide the alert.",
     "closeIcon": "Change the default icon used for **closable** alerts.",
@@ -16,9 +16,8 @@
     "prominent": "Displays a larger vertically centered icon to draw more attention.",
     "text": "Specify subtitle/body text for the alert.",
     "tile": "Removes the component's border-radius.",
-    "title": "Specify title text for the alert.",
     "transition": "Sets the component transition. Can be one of the [built in transitions](/styles/transitions) or one your own.",
-    "type": "Specify a **success**, **info**, **warning** or **error** alert. Uses the contextual color and has a pre-defined icon.",
+    "type": "Create a specialized alert that uses a contextual color and has a pre-defined icon.",
     "model-value": "Controls whether the component is visible or hidden.",
     "width": "Sets the width for the component."
   },
