--- a/packages/api-generator/src/locale/en/v-card.json
+++ b/packages/api-generator/src/locale/en/v-card.json
@@ -3,7 +3,7 @@
     "appendIcon": "Appends a [v-icon](/components/icons/) component to the header",
     "flat": "Removes the card's elevation.",
     "hover": "Applies **4dp** of elevation when hovered (default 2dp). You can find more information on the [elevation page](/styles/elevation).",
-    "image": "Specifies an image background for the card. For more advanced implementations, it is recommended that you use the [v-img](/components/images) component. You can find a [v-img example here](/components/cards/#media-with-text).",
+    "image": "Apply a specific background image to the component.",
     "prependIcon": "Prepends a [v-icon](/components/icons/) component to the header",
     "subtitle": "Generates a `v-card-subtitle` component with the supplied value",
     "text": "Generates a `v-card-text` component with the supplied value",
