docs(Example): move template sections into a v-window-item

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -107,6 +107,7 @@
   "groups": "Groups",
   "guide": "Guide",
   "help-and-support": "Help and support",
+  "hide-source": "Hide source",
   "homepage": "Vuetify Home Page",
   "inline": "Inline",
   "introduction": "Introduction",
