--- a/packages/api-generator/src/locale/en/v-tab.json
+++ b/packages/api-generator/src/locale/en/v-tab.json
@@ -9,7 +9,6 @@
     "stacked": "Displays the tab as a flex-column.",
     "sliderColor": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-tab.json))",
     "hideSlider": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-tab.json))",
-    "direction": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-tab.json))",
-    "icon": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-tab.json))"
+    "direction": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-tab.json))"
   }
 }
